src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-dwF1000-dhU-b-wfsBU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BU\nconfig:\nwindow-rule {\n    open-fullscreen false\n    default-column-width { fixed 1000; }\n    default-window-height {  }\n    border { on; }\n}"
expression: snapshot
---
initial configure:
size: 1000 × 680, bounds: 1240 × 680, states: []

post-map configures:
size: 1000 × 680, bounds: 1240 × 680, states: [Activated]
